<resources>
    <string name="app_name">Bringit Merchant</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="bring">bring</string>
    <string name="it">it</string>
    <string name="india_s_last_minute_app">India\'s Last Minute App</string>
    <string name="a_sengar_company">A SENGAR COMPANY</string>
    <string name="log_in_or_sign_up">Log in or Sign up</string>
    <string name="_91">+91</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="continue_text">Continue</string>
    <string name="enter_a_valid_number">Enter a valid number</string>
    <string name="enter_a_valid_otp">Enter a valid OTP</string>
    <string name="incorrect_otp">Incorrect OTP entered</string>
    <string name="terms_agreement_text"><![CDATA[By Continuing, you agree to our Terms of Service & Privacy Policy.]]></string>
    <string name="we_ve_sent_a_verification_code_to">We\'ve sent a verification code to</string>
    <string name="login">Login</string>
    <string name="login_greeting">Welcome</string>
    <string name="search">Search</string>
    <string name="search_text">Search</string>
    <string name="best_seller">Best Seller</string>
    <string name="fruits_amp_vegetables"><![CDATA[Vegetables & Fruits]]></string>
    <string name="grocery_amp_kitchen"><![CDATA[Grocery & Kitchen]]></string>
    <string name="snacks_amp_drinks"><![CDATA[Snacks & Drinks]]></string>
    <string name="beauty_amp_personal_care"><![CDATA[Beauty & Personal Care]]></string>
    <string name="household_essentials">Household Essentials</string>
    <string name="administrator">MERCHANT</string>
    <string name="admin_login">Merchant Login</string>
    <string name="homefragment">Home</string>
    <string name="orderfragment">Orders</string>
    <string name="addproductfragment">Add Product</string>
    <string name="add_product_details">Enter Product Details</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit</string>
    <string name="price">Price (₹)</string>
    <string name="no_of_stock">No. of Stock</string>
    <string name="product_category">Product Category</string>
    <string name="product_type">Product Type</string>
    <string name="upload_product_images">Upload Product Image</string>
    <string name="pick">PICK</string>
    <string name="add_product">Add Product</string>
    <string name="state">State</string>
    <string name="upload_product_image_error">Please upload the product image</string>
    <string name="necessary_product_details_error">Fill all the necessary product details</string>
    <string name="delete_product_images">Delete Product Images</string>
    <string name="edit">Edit</string>
    <string name="home">Home</string>
    <string name="discount_text">%1$d%% OFF</string>
    <string name="price_text">₹%1$s</string>
    <string name="mrp_text">MRP ₹%1$s</string>
    <string name="_15_mins">15 MINS</string>
    <string name="no_products_for_this_category">No Products for this Category</string>
    <string name="discount">Discount (%)</string>
    <string name="edit_product_details">Edit Product Details</string>
    <string name="save">Save</string>

</resources>