<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_light"
    tools:context=".auth.LoginFragment">

    <LinearLayout
        android:id="@+id/ll_signin_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/logo_border"
            android:clipToOutline="true"
            android:scaleType="centerCrop"
            android:src="@drawable/blinkit_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:scaleX="1.2"
            android:text="@string/india_s_last_minute_app"
            android:textColor="@color/login_dark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:scaleX="1.1"
            android:text="@string/admin_login"
            android:textColor="@color/login_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/custom_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border"
                android:paddingHorizontal="15dp"
                android:paddingVertical="16dp">

                <TextView
                    android:id="@+id/country_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:letterSpacing="0.1"
                    android:text="@string/_91"
                    app:layout_constraintStart_toStartOf="@id/custom_edit_text"
                    app:layout_constraintTop_toTopOf="@id/custom_edit_text"
                    app:layout_constraintBottom_toBottomOf="@id/custom_edit_text"
                    android:textColor="@color/login_dark"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_mobile_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/enter_mobile_number"
                    android:inputType="phone"
                    android:letterSpacing="0.1"
                    android:maxLength="10"
                    android:paddingStart="12dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/login_text_grey"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:ignore="Autofill"
                    app:layout_constraintStart_toEndOf="@id/country_code"
                    app:layout_constraintTop_toTopOf="@id/custom_edit_text"
                    app:layout_constraintBottom_toBottomOf="@id/custom_edit_text" />

                <ImageView
                    android:id="@+id/cross_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@id/custom_edit_text"
                    app:layout_constraintTop_toTopOf="@id/custom_edit_text"
                    app:layout_constraintBottom_toBottomOf="@id/custom_edit_text"
                    android:visibility="gone"
                    android:src="@drawable/baseline_cancel_16"
                    tools:visibility="visible"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_error_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="3dp"
                android:textStyle="bold"
                android:text="@string/enter_a_valid_number"
                android:textAlignment="textStart"
                android:textColor="@color/login_error_red"
                android:textSize="11sp"
                android:visibility="gone"
                tools:visibility="visible" />


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/round_button_grey"
            android:padding="10dp"
            android:text="@string/continue_text"
            android:textAllCaps="false"
            android:textColor="@color/login_text_white"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/login_border_grey"
        android:paddingVertical="5dp"
        android:text="@string/terms_agreement_text"
        android:textAlignment="center"
        android:textColor="@color/login_text_grey"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>