<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    tools:context=".AddProductFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bottom_nav_light"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Add Product"
        app:titleTextAppearance="@style/CustomToolbarTitle"
        app:titleTextColor="@color/dark_text" />

    <TextView
        android:id="@+id/tv_add_product_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/add_product_details"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/materialToolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/product_details_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_add_product_heading">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:paddingHorizontal="15dp"
            android:paddingVertical="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/et_product_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:background="@null"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/product_nam"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/login_text_grey"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/cl_product_name"
                app:layout_constraintEnd_toStartOf="@+id/cross_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/cl_product_name"
                tools:ignore="Autofill" />

            <ImageView
                android:id="@+id/cross_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:src="@drawable/baseline_cancel_16"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/et_product_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/et_product_name"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/ll_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_product_name">

            <EditText
                android:id="@+id/et_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:layout_weight="0.5"
                android:background="@drawable/edit_text_border"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/quantity_1kg_1lt"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="19dp"
                android:paddingVertical="18dp"
                android:textColor="@color/black"
                android:textColorHint="@color/login_text_grey"
                android:textSize="15sp"
                tools:ignore="Autofill" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_unit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_weight="0.5"
                android:background="@drawable/edit_text_border"
                android:paddingHorizontal="15dp"
                android:paddingVertical="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <AutoCompleteTextView
                    android:id="@+id/et_Unit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:background="@null"
                    android:fontFamily="@font/montserrat_medium"
                    android:hint="@string/unit"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/login_text_grey"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@id/cl_unit"
                    app:layout_constraintEnd_toStartOf="@+id/img_arrow_down_1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/cl_unit"
                    tools:ignore="Autofill" />

                <ImageView
                    android:id="@+id/img_arrow_down_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:src="@drawable/baseline_arrow_drop_down_24"
                    app:layout_constraintBottom_toBottomOf="@id/et_Unit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/et_Unit"
                    tools:visibility="visible" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_quantity">

            <EditText
                android:id="@+id/et_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:layout_weight="0.5"
                android:background="@drawable/edit_text_border"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/price"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="19dp"
                android:paddingVertical="18dp"
                android:textColor="@color/black"
                android:textColorHint="@color/login_text_grey"
                android:textSize="15sp"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/et_stock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_weight="0.5"
                android:background="@drawable/edit_text_border"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/no_of_stock"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="19dp"
                android:paddingVertical="18dp"
                android:textColor="@color/black"
                android:textColorHint="@color/login_text_grey"
                android:textSize="15sp"
                tools:ignore="Autofill" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_border"
            android:paddingHorizontal="15dp"
            android:paddingVertical="18dp"
            app:layout_constraintTop_toBottomOf="@+id/ll_price">

            <ImageView
                android:id="@+id/img_category"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/categories"
                app:layout_constraintBottom_toBottomOf="@id/et_category"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/et_category"
                tools:visibility="visible" />

            <AutoCompleteTextView
                android:id="@+id/et_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@null"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/product_category"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/login_text_grey"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/cl_category"
                app:layout_constraintEnd_toStartOf="@+id/img_arrow_down_2"
                app:layout_constraintStart_toEndOf="@id/img_category"
                app:layout_constraintTop_toTopOf="@id/cl_category"
                tools:ignore="Autofill" />

            <ImageView
                android:id="@+id/img_arrow_down_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_drop_down_24"
                app:layout_constraintBottom_toBottomOf="@id/et_category"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/et_category"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_border"
            android:paddingHorizontal="15dp"
            android:paddingVertical="18dp"
            app:layout_constraintTop_toBottomOf="@+id/cl_category">

            <ImageView
                android:id="@+id/img_type"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/categories"
                app:layout_constraintBottom_toBottomOf="@id/et_type"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/et_type"
                tools:visibility="visible" />

            <AutoCompleteTextView
                android:id="@+id/et_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@null"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/product_type"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/login_text_grey"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/cl_type"
                app:layout_constraintEnd_toStartOf="@+id/img_arrow_down_3"
                app:layout_constraintStart_toEndOf="@id/img_type"
                app:layout_constraintTop_toTopOf="@id/cl_type"
                tools:ignore="Autofill" />

            <ImageView
                android:id="@+id/img_arrow_down_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_drop_down_24"
                app:layout_constraintBottom_toBottomOf="@id/et_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/et_type"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lc_upload_image_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_details_form">

        <TextView
            android:id="@+id/tv_add_image_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/upload_product_images"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_upload"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_upload"
            android:layout_width="72dp"
            android:layout_height="50dp"
            android:background="@color/transparent"
            android:src="@drawable/image_upload"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="@id/tv_add_image_heading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_add_image_heading"
            app:layout_constraintTop_toTopOf="@id/tv_add_image_heading" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_images"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/otp_edit_text_background"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lc_upload_image_heading"
        tools:listitem="@layout/upload_list_item" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/round_button_grey"
        android:backgroundTint="@color/bottom_nav_light"
        android:fontFamily="@font/montserrat_bold"
        android:padding="10dp"
        android:layout_marginTop="12dp"
        android:text="@string/add_product"
        android:textAllCaps="false"
        android:textColor="@color/login_text_white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_images"/>


</androidx.constraintlayout.widget.ConstraintLayout>